# youtube-download-webui

./: .clinerules  .dockerignore  .gitignore  Dockerfile  README.md  buildkitd.toml  kamal.md  memo.md  pyproject.toml  repo.md  repo2txt.sh
.github/workflows/: deploy.yml_old
.kamal/: secrets
app/: cli_to_api.py  db.py  main.py
app/routers/: downloads.py  items.py  utils.py
config/: crontab  deploy.yml
static/: main.js  styles.css
templates/: index.html
