[project]
name = "youtube-download-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.6",
    "jinja2>=3.1.6",
    "pytest>=8.4.1",
    "ruff>=0.8.4",
    "yt-dlp[curl-cffi,default]",
]

[tool.uv.sources]
yt-dlp = { url = "https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz" }
